<resources>
    <string name="app_name">TaskManagement_Android</string>
    <string name="status">Task Status</string>
    <string name="pending">Pending</string>
    <string name="inprogres">in progress</string>
    <string name="done">Done</string>
    <string name="updatetask">Update Task</string>
    <string name="delete">Delete</string>
    <string name="backtohome">Back To Home</string>
    <string name="detailtask">Detail Task</string>
    <string name="desc_detailtask">Check your task!</string>
    <string name="taskname">\t\t\t Your Task</string>
    <string name="taskdescription">\t\t\t Task Description</string>
    <string name="task_date">\t\t\t  Pick the Date</string>
    <string name="task_time">\t\t\t  Pick the Time</string>
    <string name="welcomepage">Welcome To TaskPixie!</string>
    <string name="descapp">Welcome to TaskPixie, the enchanting task manager designed to bring a touch of magic to your everyday productivity</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="userprofile">User Profile</string>
    <string name="updateProfil">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="have_a_nice_day">Have a nice day!</string>
    <string name="user_avatar">user avatar</string>
    <string name="pick_date">Pick Date</string>
    <string name="date_hint">2024-04-07</string>
    <string name="high">High\n0</string>
    <string name="low">Low\n0</string>
    <string name="urgent">Urgent\n0</string>
    <string name="your_task">Your Task</string>
    <string name="task_logo">Task Logo</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Description</string>
    <string name="task_status">status</string>
    <string name="create_your_task">Create Your Task</string>
    <string name="create_tips">Let\'s create your own task to remember!</string>
    <string name="input_title">Title</string>
    <string name="input_description">Description</string>
    <string name="input_status">Status</string>
    <string name="input_priority">Priority</string>
    <string name="input_due_date">Due Date</string>
    <string name="add_task">Add Task</string>
    <string name="pickdate">Pick Date</string>
    <string name="cancel">Cancel</string>
    <string name="svaeupdate">Save Update</string>
    <string name="desc_updatetask">Update your task!</string>
    <string name="choosestatus">Choose task status!</string>
    <string name="task_priority">Task Priority</string>
    <string name="updated_at">Updated At</string>
    <string name="created_at">Created At</string>
    <string name="your_task1">Your Task</string>
    <string name="hello">Hello!</string>
    <string name="input_username">Enter Your Username</string>
    <string name="input_email">Enter Your Email</string>
    <string name="input_password">Enter Password</string>
    <string name="input_confirm_password">Confirm Password</string>
    <string name="redirect_login">Have an account?</string>
    <string name="link_login">Login</string>
    <string name="input_identity">Enter your username/email</string>
    <string name="redirect_register">Don\'t have acount?</string>
    <string name="link_register">Register</string>
    <string name="task_list">Task List</string>
    <string name="task_pending">Pending</string>
    <string name="profile">Profile</string>
    <string name="progress">On Progress</string>
    <string name="deadline">Task Deadline</string>
    <string name="ongoingtask">On Going Task</string>
    <string name="task_pending">Pending Task</string>
    <string name="task_done">Done Task</string>
</resources>