<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/taskListFragment"
        android:title="@string/task_list"
        android:icon="@drawable/icon_home"/>

    <item
        android:id="@+id/pendingFragment"
        android:title="@string/task_pending"
        android:icon="@drawable/icon_hourglass"/>

    <item
        android:id="@+id/addTaskFragment"
        android:title="@string/add_task"
        android:enabled="false"/>

    <item
        android:id="@+id/progressFragment"
        android:title="@string/progress"
        android:icon="@drawable/icon_done"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/icon_profile"/>

</menu>
