<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/textHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="@color/blue1"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="230dp"
        android:layout_height="226dp"
        android:layout_below="@+id/textHello"
        android:layout_centerHorizontal="true"
        android:importantForAccessibility="no"
        android:src="@drawable/logoapp" />

    <LinearLayout
        android:id="@+id/input_Register"
        android:layout_width="match_parent"
        android:layout_height="279dp"
        android:layout_below="@id/img_logo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="3dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_input"
            android:hint="@string/input_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_input"
            android:hint="@string/input_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_input"
            android:hint="@string/input_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_input"
            android:hint="@string/input_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center" />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/registerBtn"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="615dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bluegradient_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_Register"
        app:layout_constraintWidth_percent="0.75" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/registerBtn"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/redirect_login"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/link_login"
            android:textColor="@color/blue1"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>