<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/back_button"
        android:layout_width="65dp"
        android:layout_height="44dp"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/icon_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/title_detailtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/detailtask"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <!--Task Name-->
    <TextView
        android:id="@+id/desc_detailtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/desc_detailtask"
        android:textColor="@color/blue1"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_detailtask"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_detailtask"
        android:layout_marginTop="16dp"
        app:startIconDrawable="@drawable/icon_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/taskname"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Task Description -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_name"
        android:layout_marginTop="16dp"
        app:startIconDrawable="@drawable/icon_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/taskdescription"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>



    <!-- Task Date -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_description"
        android:layout_marginTop="16dp"
        app:startIconDrawable="@drawable/icon_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_date"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/task_date"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Task Time -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_date"
        android:layout_marginTop="16dp"
        app:startIconDrawable="@drawable/icon_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_time"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/task_time"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/status"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <LinearLayout
        android:id="@+id/rb_status"
        android:layout_width="357dp"
        android:layout_height="42dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rb_pending"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:fontFamily="@font/custom_font"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/pending" />

        <RadioButton
            android:id="@+id/rb_inprogres"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:fontFamily="@font/custom_font"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/inprogres" />

        <RadioButton
            android:id="@+id/rb_done"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:fontFamily="@font/custom_font"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/done" />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btn_update_task"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bluegradient_button"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/updatetask"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rb_status"
        app:layout_constraintVertical_bias="0.076" />

    <android.widget.Button
        android:id="@+id/btn_delete"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/redgradient_button"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_update_task"
        app:layout_constraintVertical_bias="0.144" />

    <android.widget.Button
        android:id="@+id/btn_backtohome"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bluegradient_button"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/backtohome"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete"
        app:layout_constraintVertical_bias="0.26" />


</androidx.constraintlayout.widget.ConstraintLayout>
