<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:backgroundTint="@color/white2"
    card_view:cardElevation="8dp"
    card_view:cardMaxElevation="12dp"
    card_view:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/task_logo"
            card_view:srcCompat="@drawable/icon_task"
            card_view:tint="@color/blue3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start|center">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_title"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp"
                android:textColor="@color/blue3"/>

            <TextView
                android:id="@+id/task_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/task_priority"
                android:layout_marginBottom="7dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_button"
                android:backgroundTint="@color/blue3"
                android:fontFamily="@font/poppins_bold"
                android:padding="1dp"
                android:text="@string/task_status"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>